--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "moment": "^2.29.3",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-helmet": "^6.1.0",
     "react-icons": "^4.3.1",
     "react-modal-image": "^2.5.0",
     "react-redux": "^8.0.1",
